--- a/src/App.css
+++ b/src/App.css
@@ -45,11 +45,11 @@
   --radius: 0.625rem;
   --background: #ffffff;
   --foreground: #1A1A1A;
-  --card: #ffffff;
-  --card-foreground: #1A1A1A;
-  --popover: #ffffff;
+  --card: #6e6b6b;
+  --card-foreground: #605f5f;
+  --popover: #fbfafa;
   --popover-foreground: #1A1A1A;
-  --primary: #2E7D32; /* Dark Green */
+  --primary: #1e5420; /* Dark Green */
   --primary-foreground: #ffffff;
   --secondary: #C8E6C9; /* Light Green */
   --secondary-foreground: #1A1A1A;
@@ -83,37 +83,37 @@
 }
 
 .dark {
-  --background: oklch(0.145 0 0);
-  --foreground: oklch(0.985 0 0);
-  --card: oklch(0.205 0 0);
-  --card-foreground: oklch(0.985 0 0);
-  --popover: oklch(0.205 0 0);
-  --popover-foreground: oklch(0.985 0 0);
-  --primary: oklch(0.922 0 0);
-  --primary-foreground: oklch(0.205 0 0);
-  --secondary: oklch(0.269 0 0);
-  --secondary-foreground: oklch(0.985 0 0);
-  --muted: oklch(0.269 0 0);
-  --muted-foreground: oklch(0.708 0 0);
-  --accent: oklch(0.269 0 0);
-  --accent-foreground: oklch(0.985 0 0);
-  --destructive: oklch(0.704 0.191 22.216);
-  --border: oklch(1 0 0 / 10%);
-  --input: oklch(1 0 0 / 15%);
-  --ring: oklch(0.556 0 0);
-  --chart-1: oklch(0.488 0.243 264.376);
-  --chart-2: oklch(0.696 0.17 162.48);
-  --chart-3: oklch(0.769 0.188 70.08);
-  --chart-4: oklch(0.627 0.265 303.9);
-  --chart-5: oklch(0.645 0.246 16.439);
-  --sidebar: oklch(0.205 0 0);
-  --sidebar-foreground: oklch(0.985 0 0);
-  --sidebar-primary: oklch(0.488 0.243 264.376);
-  --sidebar-primary-foreground: oklch(0.985 0 0);
-  --sidebar-accent: oklch(0.269 0 0);
-  --sidebar-accent-foreground: oklch(0.985 0 0);
-  --sidebar-border: oklch(1 0 0 / 10%);
-  --sidebar-ring: oklch(0.556 0 0);
+  --background: #1a1a1a;
+  --foreground: #f3f4f6;
+  --card: #2d2d2d;
+  --card-foreground: #f3f4f6;
+  --popover: #2d2d2d;
+  --popover-foreground: #f3f4f6;
+  --primary: #4CAF50;
+  --primary-foreground: #1a1a1a;
+  --secondary: #2d2d2d;
+  --secondary-foreground: #f3f4f6;
+  --muted: #2d2d2d;
+  --muted-foreground: #f3f4f6;
+  --accent: #2d2d2d;
+  --accent-foreground: #f3f4f6;
+  --destructive: #991B1B;
+  --border: #374151;
+  --input: #4B5563;
+  --ring: #4CAF50;
+  --chart-1: #4CAF50;
+  --chart-2: #2E7D32;
+  --chart-3: #2E7D32;
+  --chart-4: #2E7D32;
+  --chart-5: #2E7D32;
+  --sidebar: #2d2d2d;
+  --sidebar-foreground: #f3f4f6;
+  --sidebar-primary: #4CAF50;
+  --sidebar-primary-foreground: #1a1a1a;
+  --sidebar-accent: #2d2d2d;
+  --sidebar-accent-foreground: #f3f4f6;
+  --sidebar-border: #374151;
+  --sidebar-ring: #4CAF50;
 }
 
 @layer base {
